<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">verdu_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_compradog">Compradog</string>
  <string name="lbl_buscar">Buscar</string>
  <string name="lbl_3_meses">3 meses</string>
  <string name="msg_plantilla_gmail">plantilla@gmail.com</string>
  <string name="lbl_registrar">Registrar</string>
  <string name="lbl_llamar">Llamar</string>
  <string name="msg_confirmar_contr">Confirmar contraseña</string>
  <string name="lbl_husky">Husky</string>
  <string name="msg_caracter_sticas">Características
Color: castaño
Raza: pura
Raza padre:Pastor belga
Color padre: castaño
Raza madre: Pastor belga
Color Madre:negro
Ciudad: Sevilla</string>
  <string name="msg_color_negro_ra">Color: negro
Raza: pura
Ciudad: Burgod</string>
  <string name="lbl_vendedog">Vendedog</string>
  <string name="lbl_raza">Raza</string>
  <string name="lbl_a_adir_foto">Añadir foto</string>
  <string name="lbl_caracter_sticas">Características
</string>
  <string name="msg_color_casta_o2">Color: castaño
Raza: pura
Ciudad: Sevilla</string>
  <string name="msg_color_casta_o3">Color: castaño
Raza: pura
Ciudad: Barcelona</string>
  <string name="lbl_pastor_belga"> Pastor belga</string>
  <string name="lbl_vendido_por">Vendido por :</string>
  <string name="lbl_vendedor">Vendedor</string>
  <string name="lbl">******</string>
  <string name="lbl_jos_luis">José Luis</string>
  <string name="msg_iniciar_sesi_n">Iniciar sesión con Google</string>
  <string name="lbl_edad">Edad</string>
  <string name="lbl_eliminar">Eliminar</string>
  <string name="msg_ya_tienes_cuen2">¿Ya tienes cuenta?</string>
  <string name="lbl_localizaci_ntr">Localizacióntr</string>
  <string name="msg_color_casta_o">Color: castaño
Raza: pura
Raza padre:Pastor belga
Color padre: castaño
Raza madre: Pastor belga
Color Madre:negro
Ciudad: Sevilla</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_raza_madre">Raza madre</string>
  <string name="lbl_registrarse">Registrarse</string>
  <string name="msg_iniciar_sesi_n2">Iniciar sesión con </string>
  <string name="lbl_inicia_sesi_n"> Inicia sesión</string>
  <string name="lbl_color_padre">Color padre</string>
  <string name="lbl_google">Google</string>
  <string name="msg_no_tienes_cuen2">¿No tienes cuenta? </string>
  <string name="lbl_400">400\u20ac</string>
  <string name="lbl_nombre">Nombre</string>
  <string name="lbl_600">600\u20ac</string>
  <string name="lbl_800">800\u20ac</string>
  <string name="msg_ya_tienes_cuen">¿Ya tienes cuenta? Inicia sesión</string>
  <string name="lbl_color_madre">Color madre</string>
  <string name="lbl_pomerania">Pomerania</string>
  <string name="msg_no_tienes_cuen">¿No tienes cuenta? Registrate</string>
  <string name="lbl_iniciar_sesi_n">Iniciar Sesión</string>
  <string name="lbl_teckel">Teckel</string>
  <string name="msg_inicio_de_sesi">Inicio de sesión</string>
  <string name="lbl_registrate">Registrate</string>
  <string name="lbl_cerrar_sesi_n">Cerrar sesión</string>
  <string name="lbl_rastreator">Rastreator</string>
  <string name="lbl_raza_padre">Raza padre</string>
  <string name="lbl_color">Color</string>
  <string name="lbl_mis_perros">Mis perros</string>
  <string name="msg_recuperar_contr">Recuperar contraseña</string>
  <string name="lbl_comprador">Comprador</string>
  <string name="lbl_contrase_a">Contraseña</string>
  <string name="lbl_350">350\u20ac</string>
  <string name="msg_color_negro_ra2">Color: negro
Raza: cruce
Ciudad: Los Palacios</string>
  <string name="msg_contrase_a_inco">Contraseña incorrecta.</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
