<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="inicioDeSesionFallidoVM" type="com.verdusapplication.app.modules.iniciodesesionfallido.data.viewmodel.InicioDeSesionFallidoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnrectangleone"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900_8c">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearIniciodesesio"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:gravity="start"
                    android:id="@+id/imageRectangleOne"
                    android:layout_height="@dimen/_306pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_rectangle1_306x430}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle1_306x430"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtIniciodesesi"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_35pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.txtIniciodesesi}"
                    style="@style/txtInterextrabold28" tools:text="@string/msg_inicio_de_sesi"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_52pxh"
                    android:layout_marginStart="@dimen/_52pxh"
                    android:layout_marginTop="@dimen/_32pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.txtEmail}"
                    style="@style/txtIntersemibold24" tools:text="@string/lbl_email"/>
                <EditText
                    android:background="@drawable/rectangle_bg_bluegray_100_border_gray_900_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/msg_plantilla_gmail"
                    android:id="@+id/etEmailOne"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_22pxh"
                    android:paddingTop="@dimen/_23pxv"
                    android:singleLine="true"
                    android:text="@={inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.etEmailOneValue}"
                    android:textColorHint="@color/black_900"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtContrasea"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_56pxh"
                    android:layout_marginStart="@dimen/_56pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.txtContrasea}"
                    style="@style/txtIntersemibold24" tools:text="@string/lbl_contrase_a"/>
                <EditText
                    android:background="@drawable/rectangle_bg_bluegray_100_border_gray_900_radius_10"
                    android:ellipsize="end" android:hint="@string/lbl"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_22pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_22pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@={inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.etPasswordValue}"
                    android:textColorHint="@color/black_900"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtContraseainco"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_52pxh"
                    android:layout_marginStart="@dimen/_52pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.txtContraseainco}"
                    style="@style/txtInterregular16_1" tools:text="@string/msg_contrase_a_inco"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnIniciarSesin"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_iniciar_sesi_n"
                    android:textAllCaps="false"
                    style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_iniciar_sesi_n"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtIniciarsesin"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.txtIniciarsesin}"
                    style="@style/txtInterregular16" tools:text="@string/msg_iniciar_sesi_n"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtNotienescuen"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{inicioDeSesionFallidoVM.inicioDeSesionFallidoModel.txtNotienescuen}"
                    style="@style/txtInterregular16" tools:text="@string/msg_no_tienes_cuen"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnRecuperarContrasea"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_24pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_24pxv"
                    android:singleLine="true"
                    android:text="@string/msg_recuperar_contr"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/msg_recuperar_contr"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
