<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listrectangletenRowModel" type="com.verdusapplication.app.modules.pantallaprinciplmenu.data.model.ListrectangletenRowModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearRowrectangleten"
        style="@style/groupStylebluegray_100cornerRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageRectangleTen"
            imageRes="@{@drawable/img_rectangle10}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_rectangle10" />

        <LinearLayout
            android:id="@+id/linearColumnlanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLanguage"
                style="@style/txtInterextrabold20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{listrectangletenRowModel.txtLanguage}"
                tools:text="@string/lbl_pastor_belga" />

            <TextView
                android:id="@+id/txtColorcastao"
                style="@style/txtInterextralight15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:text="@{listrectangletenRowModel.txtColorcastao}"
                tools:text="@string/msg_color_casta_o2" />

            <TextView
                android:id="@+id/txtPrice"
                style="@style/txtInterblack20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{listrectangletenRowModel.txtPrice}"
                tools:text="@string/lbl_400" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
