<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registroOneVM" type="com.verdusapplication.app.modules.registroone.data.viewmodel.RegistroOneVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnlogo"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_383pxv"
        android:layout_marginEnd="@dimen/_3pxh"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900_8c">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <FrameLayout android:id="@+id/frameStackrecuperarcontr"
                android:layout_height="@dimen/_54pxv" android:layout_width="match_parent">
                <LinearLayout
                    android:id="@+id/linearColumnrecuperarcontr"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylebluegray_100">
                    <TextView android:ellipsize="end"
                        android:gravity="end"
                        android:id="@+id/txtRecuperarcontr"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginEnd="@dimen/_43pxh"
                        android:layout_marginStart="@dimen/_43pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{registroOneVM.registroOneModel.txtRecuperarcontr}"
                        style="@style/txtInterextrabold28_1" tools:text="@string/msg_recuperar_contr"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageLOGO"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_54pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_width="@dimen/_70pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_logo_5}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logo_5"/>
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearRegistroOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_45pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_900_8c">
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registroOneVM.registroOneModel.txtEmail}"
                style="@style/txtIntersemibold24" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_bg_bluegray_100_border_gray_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/msg_plantilla_gmail"
                android:id="@+id/etEmailOne"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_22pxh"
                android:paddingTop="@dimen/_23pxv"
                android:singleLine="true"
                android:text="@={registroOneVM.registroOneModel.etEmailOneValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtGroupThirtyNine"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@{registroOneVM.registroOneModel.txtGroupThirtyNine}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/msg_recuperar_contr"/>
            <ImageView android:id="@+id/imageCheckmark"
                android:layout_gravity="end"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_214pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_checkmark"
                tools:ignore="ContentDescription" tools:src="@drawable/img_checkmark"/>
        </LinearLayout>
    </LinearLayout>
</layout>
